--- a/MembiOS/UI/Views/DiagnosisView/DiagnosisView.xib
+++ b/MembiOS/UI/Views/DiagnosisView/DiagnosisView.xib
@@ -17,7 +17,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zbD-cd-CFs" userLabel="Modal View">
-                    <rect key="frame" x="30" y="189" width="354" height="528"/>
+                    <rect key="frame" x="30" y="192.66666666666663" width="354" height="521"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="_Diagnosis Label" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yrg-r3-cNR" userLabel="DiagnosisLabel">
                             <rect key="frame" x="112" y="8" width="130" height="20"/>
@@ -27,7 +27,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NNM-ZU-nif">
-                            <rect key="frame" x="48" y="64" width="258" height="195"/>
+                            <rect key="frame" x="48" y="64.000000000000028" width="258" height="194.99999999999997"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="NNM-ZU-nif" secondAttribute="height" multiplier="86:65" id="qpm-FA-JtN"/>
                             </constraints>
@@ -45,10 +45,10 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ITk-fA-XlB">
-                            <rect key="frame" x="32" y="441" width="290" height="55"/>
+                            <rect key="frame" x="32" y="441" width="290" height="48"/>
                             <color key="backgroundColor" name="aena.secondary"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="55" id="Asm-Re-p6m"/>
+                                <constraint firstAttribute="height" constant="48" id="Asm-Re-p6m"/>
                             </constraints>
                             <color key="tintColor" name="aena.primary"/>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
