--- a/MembiOS/UI/Views/DocumentSelector/DocumentSelectorInfoView.xib
+++ b/MembiOS/UI/Views/DocumentSelector/DocumentSelectorInfoView.xib
@@ -18,15 +18,18 @@
             <rect key="frame" x="0.0" y="0.0" width="494" height="90"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GOp-XR-6UL">
-                    <rect key="frame" x="16" y="12" width="462" height="0.0"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GOp-XR-6UL">
+                    <rect key="frame" x="16" y="12" width="462" height="41"/>
+                    <string key="text">Los documentos con NFC son:
+DNI 3.0 y 4.0, NIE y Pasaporte posterior a 2015 </string>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r2K-qd-KPC">
-                    <rect key="frame" x="16" y="12" width="462" height="66"/>
+                    <rect key="frame" x="16" y="53" width="462" height="25"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <state key="normal" title="¿Cómo reconocerlos?"/>
                     <connections>
                         <action selector="actionTouchUpInside:" destination="-1" eventType="touchUpInside" id="zsl-wW-qjA"/>
                     </connections>
