--- a/MembiOS/UI/Views/DocumentSelector/DocumentSelectorSelectView.xib
+++ b/MembiOS/UI/Views/DocumentSelector/DocumentSelectorSelectView.xib
@@ -19,7 +19,7 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="667" height="100"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1CJ-JG-0qS">
@@ -47,21 +47,21 @@
                         <constraint firstItem="3gI-p7-Gmx" firstAttribute="centerY" secondItem="1CJ-JG-0qS" secondAttribute="centerY" id="lq8-cO-hp3"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G6K-sf-f98">
-                    <rect key="frame" x="96" y="39.5" width="455" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G6K-sf-f98">
+                    <rect key="frame" x="108" y="39.5" width="84" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="y6g-64-dyP">
-                    <rect key="frame" x="559" y="38" width="24" height="24"/>
+                    <rect key="frame" x="200" y="38" width="24" height="24"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="24" id="OdM-MI-rbt"/>
                         <constraint firstAttribute="height" constant="24" id="bIW-lb-wZT"/>
                     </constraints>
                 </imageView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2pq-sL-3Ar">
-                    <rect key="frame" x="591" y="26" width="68" height="48"/>
+                    <rect key="frame" x="244" y="26" width="68" height="48"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="68" id="5sz-GQ-Tbx"/>
                         <constraint firstAttribute="height" constant="48" id="d99-aw-QBc"/>
@@ -72,11 +72,12 @@
             <constraints>
                 <constraint firstItem="1CJ-JG-0qS" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="4YU-a5-foy"/>
                 <constraint firstAttribute="trailing" secondItem="2pq-sL-3Ar" secondAttribute="trailing" constant="8" id="8gr-yi-JUL"/>
-                <constraint firstItem="G6K-sf-f98" firstAttribute="leading" secondItem="1CJ-JG-0qS" secondAttribute="trailing" constant="8" id="I2J-4t-mfK"/>
+                <constraint firstItem="G6K-sf-f98" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1CJ-JG-0qS" secondAttribute="leading" constant="8" id="H6p-Aw-2aB"/>
+                <constraint firstItem="G6K-sf-f98" firstAttribute="leading" secondItem="1CJ-JG-0qS" secondAttribute="trailing" priority="500" constant="20" id="I2J-4t-mfK"/>
                 <constraint firstItem="2pq-sL-3Ar" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="KiO-vw-8EU"/>
                 <constraint firstAttribute="bottom" secondItem="1CJ-JG-0qS" secondAttribute="bottom" constant="10" id="MvY-jN-tZA"/>
                 <constraint firstItem="G6K-sf-f98" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="h5I-hG-dFE"/>
-                <constraint firstItem="2pq-sL-3Ar" firstAttribute="leading" secondItem="y6g-64-dyP" secondAttribute="trailing" constant="8" id="nKZ-co-qS0"/>
+                <constraint firstItem="2pq-sL-3Ar" firstAttribute="leading" secondItem="y6g-64-dyP" secondAttribute="trailing" constant="20" id="nKZ-co-qS0"/>
                 <constraint firstItem="y6g-64-dyP" firstAttribute="leading" secondItem="G6K-sf-f98" secondAttribute="trailing" constant="8" id="vhK-IE-8i4"/>
                 <constraint firstItem="1CJ-JG-0qS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="vzi-LF-ZeG"/>
                 <constraint firstItem="y6g-64-dyP" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="yt5-Df-wM2"/>
