--- a/MembiOS/UI/Views/InfoAcceptedDocsView/InfoAcceptedDocsView.xib
+++ b/MembiOS/UI/Views/InfoAcceptedDocsView/InfoAcceptedDocsView.xib
@@ -9,8 +9,8 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="neo_sans_pro_regular.OTF">
-            <string>NeoSansPro-Regular</string>
+        <array key="SourceSansPro-Regular.ttf">
+            <string>SourceSansPro-Regular</string>
         </array>
     </customFonts>
     <objects>
@@ -27,8 +27,8 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DNI 3.0" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bCy-ce-D1Z">
-                    <rect key="frame" x="177.5" y="678" width="59" height="18"/>
-                    <fontDescription key="fontDescription" name="NeoSansPro-Regular" family="Neo Sans Pro" pointSize="18"/>
+                    <rect key="frame" x="180.5" y="673" width="53.5" height="23"/>
+                    <fontDescription key="fontDescription" name="SourceSansPro-Regular" family="Source Sans Pro" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
