--- a/MembiOS/UI/Views/Result/Failure/FailureView.xib
+++ b/MembiOS/UI/Views/Result/Failure/FailureView.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -28,12 +29,15 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JZF-Kc-Bwy">
-                    <rect key="frame" x="64" y="751" width="286" height="55"/>
+                    <rect key="frame" x="64" y="758" width="286" height="48"/>
+                    <color key="backgroundColor" name="aena.colorMembMain"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="55" id="1C6-RM-NGH"/>
+                        <constraint firstAttribute="height" constant="48" id="1C6-RM-NGH"/>
                     </constraints>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                    <state key="normal" title="FINALIZAR"/>
+                    <state key="normal" title="FINALIZAR">
+                        <color key="titleColor" name="aena.colorMembButtonText"/>
+                    </state>
                     <connections>
                         <action selector="actionTouchUpInside:" destination="iN0-l3-epB" eventType="touchUpInside" id="l8c-MV-V4v"/>
                     </connections>
@@ -70,6 +74,12 @@
         </view>
     </objects>
     <resources>
+        <namedColor name="aena.colorMembButtonText">
+            <color red="0.10196078431372549" green="0.15294117647058825" blue="0.19607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="aena.colorMembMain">
+            <color red="0.58823529411764708" green="0.80784313725490198" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
