--- a/MembiOS/UI/Views/StepView/StepView.xib
+++ b/MembiOS/UI/Views/StepView/StepView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -10,11 +10,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="CircularStd-Book.otf">
-            <string>CircularStd-Book</string>
+        <array key="SourceSansPro-Regular.ttf">
+            <string>SourceSansPro-Regular</string>
         </array>
-        <array key="CircularStd-Medium.otf">
-            <string>CircularStd-Medium</string>
+        <array key="SourceSansPro-SemiBold.ttf">
+            <string>SourceSansPro-SemiBold</string>
         </array>
     </customFonts>
     <objects>
@@ -31,45 +31,54 @@
                         <constraint firstAttribute="height" constant="72" id="C02-fm-Z23"/>
                     </constraints>
                 </view>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="JW4-vK-CXd">
-                    <rect key="frame" x="84.000000000000014" y="148" width="246.33333333333337" height="75.666666666666686"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="JW4-vK-CXd" userLabel="Step Stack View">
+                    <rect key="frame" x="93.5" y="124" width="227.5" height="226"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Paso X de Y:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="OGb-o1-s3J">
-                            <rect key="frame" x="26.666666666666671" y="0.0" width="193" height="39.666666666666664"/>
-                            <fontDescription key="fontDescription" name="CircularStd-Medium" family="Circular Std" pointSize="34"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" ambiguous="YES" text="Paso X de Y:" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="OGb-o1-s3J">
+                            <rect key="frame" x="73.5" y="0.0" width="80" height="195.5"/>
+                            <fontDescription key="fontDescription" name="SourceSansPro-SemiBold" family="Source Sans Pro" pointSize="16"/>
                             <color key="textColor" name="titleFont"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Lectura de Documento" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bdm-2i-Bgo">
-                            <rect key="frame" x="0.0" y="47.666666666666657" width="246.33333333333334" height="28"/>
-                            <fontDescription key="fontDescription" name="CircularStd-Book" family="Circular Std" pointSize="24"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" ambiguous="YES" text="Lectura de Documento" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bdm-2i-Bgo">
+                            <rect key="frame" x="0.0" y="195.5" width="227.5" height="30.5"/>
+                            <fontDescription key="fontDescription" name="SourceSansPro-Regular" family="Source Sans Pro" pointSize="24"/>
                             <color key="textColor" name="titleFont"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
                 </stackView>
                 <view contentMode="scaleToFill" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="HGz-l2-rFr" customClass="AnimationView" customModule="Lottie">
-                    <rect key="frame" x="72" y="291" width="270" height="270"/>
+                    <rect key="frame" x="32" y="350" width="350" height="350"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="HGz-l2-rFr" secondAttribute="height" multiplier="1:1" id="KRb-hY-ghp"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Busca un fondo con buen contraste y coloca el documento dentro del recuadro" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BtE-4Y-0Di">
-                    <rect key="frame" x="40" y="606" width="334" height="112"/>
-                    <fontDescription key="fontDescription" name="CircularStd-Book" family="Circular Std" pointSize="24"/>
-                    <color key="textColor" name="titleFont"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="SzT-wl-iJ3" userLabel="Info Stack View">
+                    <rect key="frame" x="20" y="700" width="374" height="50"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BtE-4Y-0Di">
+                            <rect key="frame" x="88" y="0.0" width="198" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="J7P-CI-9wI"/>
+                            </constraints>
+                            <string key="text">Retira cualquier elemento 
+que obstruya tu cara</string>
+                            <fontDescription key="fontDescription" name="SourceSansPro-Regular" family="Source Sans Pro" pointSize="18"/>
+                            <color key="textColor" name="titleFont"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BQx-Id-ZEG">
-                    <rect key="frame" x="64" y="751" width="286" height="55"/>
-                    <color key="backgroundColor" name="primaryBackground"/>
+                    <rect key="frame" x="64" y="760" width="286" height="48"/>
+                    <color key="backgroundColor" name="aena.colorMembMain"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="55" id="QtJ-zR-dnB"/>
+                        <constraint firstAttribute="height" constant="48" id="QtJ-zR-dnB"/>
                     </constraints>
-                    <color key="tintColor" name="white"/>
                     <state key="normal" title="Button">
-                        <color key="titleColor" name="white"/>
+                        <color key="titleColor" name="aena.colorMembButtonText"/>
                     </state>
                     <connections>
                         <action selector="actionTouchUpInside:" destination="iN0-l3-epB" eventType="touchUpInside" id="Gd2-LR-CLt"/>
@@ -79,35 +88,31 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" name="tipsBackground"/>
             <constraints>
+                <constraint firstItem="SzT-wl-iJ3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="0gR-5x-34q"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="BQx-Id-ZEG" secondAttribute="trailing" constant="64" id="3NH-N2-v5O"/>
-                <constraint firstItem="BQx-Id-ZEG" firstAttribute="top" relation="greaterThanOrEqual" secondItem="BtE-4Y-0Di" secondAttribute="bottom" constant="8" id="3NY-xX-p4z"/>
-                <constraint firstItem="JW4-vK-CXd" firstAttribute="top" relation="greaterThanOrEqual" secondItem="K5y-Bo-Bnb" secondAttribute="bottom" constant="8" id="4aG-aX-hBL"/>
                 <constraint firstItem="HGz-l2-rFr" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="4aZ-2k-GOJ"/>
-                <constraint firstItem="BtE-4Y-0Di" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="1.478" id="4wr-ei-pXo"/>
                 <constraint firstItem="HGz-l2-rFr" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="32" id="8jE-Na-tbl"/>
-                <constraint firstItem="HGz-l2-rFr" firstAttribute="top" relation="greaterThanOrEqual" secondItem="JW4-vK-CXd" secondAttribute="bottom" constant="8" id="9cg-xZ-Msz"/>
-                <constraint firstItem="JW4-vK-CXd" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="0.415" priority="750" id="H0Z-CB-19k"/>
+                <constraint firstItem="HGz-l2-rFr" firstAttribute="top" secondItem="JW4-vK-CXd" secondAttribute="bottom" id="9cg-xZ-Msz"/>
+                <constraint firstAttribute="trailing" secondItem="SzT-wl-iJ3" secondAttribute="trailing" constant="20" id="CLO-2c-Bsd"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="BQx-Id-ZEG" secondAttribute="bottom" priority="250" constant="56" id="MBV-E1-F65"/>
-                <constraint firstItem="HGz-l2-rFr" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" priority="250" constant="72" id="NW4-wV-gBP"/>
                 <constraint firstItem="K5y-Bo-Bnb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="OHB-dn-z8p"/>
-                <constraint firstItem="BtE-4Y-0Di" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="40" id="SYs-w8-2ke"/>
+                <constraint firstItem="JW4-vK-CXd" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="0.4" priority="750" id="RkD-iS-euh"/>
                 <constraint firstItem="K5y-Bo-Bnb" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="Xxa-ES-w5g"/>
                 <constraint firstItem="BQx-Id-ZEG" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="64" id="ZOx-hg-wJl"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="HGz-l2-rFr" secondAttribute="trailing" priority="250" constant="72" id="aHm-oK-Mso"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="HGz-l2-rFr" secondAttribute="trailing" constant="32" id="aO7-fb-vab"/>
+                <constraint firstItem="HGz-l2-rFr" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="vUN-kp-3ea" secondAttribute="trailing" constant="32" id="aO7-fb-vab"/>
+                <constraint firstItem="BQx-Id-ZEG" firstAttribute="top" secondItem="SzT-wl-iJ3" secondAttribute="bottom" constant="10" id="bxr-g3-PK1"/>
                 <constraint firstItem="JW4-vK-CXd" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="egP-0D-Hlv"/>
-                <constraint firstAttribute="trailing" secondItem="BtE-4Y-0Di" secondAttribute="trailing" constant="40" id="mDd-Co-AAo"/>
-                <constraint firstItem="BQx-Id-ZEG" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="1.74" priority="750" constant="-1.0199999999999818" id="qTq-0f-Xgt"/>
+                <constraint firstItem="JW4-vK-CXd" firstAttribute="top" relation="greaterThanOrEqual" secondItem="K5y-Bo-Bnb" secondAttribute="bottom" constant="8" id="kJ5-gT-fQd"/>
+                <constraint firstItem="SzT-wl-iJ3" firstAttribute="top" secondItem="HGz-l2-rFr" secondAttribute="bottom" id="mdl-e2-4vI"/>
+                <constraint firstItem="BQx-Id-ZEG" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="1.75" priority="750" id="qTq-0f-Xgt"/>
                 <constraint firstItem="K5y-Bo-Bnb" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="vkZ-Go-8mW"/>
-                <constraint firstItem="BtE-4Y-0Di" firstAttribute="top" relation="greaterThanOrEqual" secondItem="HGz-l2-rFr" secondAttribute="bottom" constant="8" id="weE-gU-heA"/>
-                <constraint firstItem="HGz-l2-rFr" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="0.951" id="z1I-Dc-9bc"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="BQx-Id-ZEG" secondAttribute="bottom" constant="8" id="yb4-09-UnF"/>
             </constraints>
             <connections>
                 <outlet property="actionButton" destination="BQx-Id-ZEG" id="o85-3v-2Ud"/>
-                <outlet property="animationLeftConstraint" destination="8jE-Na-tbl" id="fsC-HZ-xie"/>
-                <outlet property="animationRightConstraint" destination="aO7-fb-vab" id="Kjr-1c-EAP"/>
                 <outlet property="animationView" destination="HGz-l2-rFr" id="Grm-bE-RST"/>
                 <outlet property="headerView" destination="K5y-Bo-Bnb" id="Xtx-nc-3sb"/>
+                <outlet property="infoStackView" destination="SzT-wl-iJ3" id="yaz-QF-epI"/>
                 <outlet property="messageLabel" destination="BtE-4Y-0Di" id="51i-HT-62m"/>
                 <outlet property="stepCountLabel" destination="OGb-o1-s3J" id="9qK-bg-avg"/>
                 <outlet property="titleLabel" destination="Bdm-2i-Bgo" id="dc3-Zc-Sks"/>
@@ -116,17 +121,17 @@
         </view>
     </objects>
     <resources>
-        <namedColor name="primaryBackground">
-            <color red="0.36470588235294116" green="0.24313725490196078" blue="0.62745098039215685" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="aena.colorMembButtonText">
+            <color red="0.10196078431372549" green="0.15294117647058825" blue="0.19607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="aena.colorMembMain">
+            <color red="0.58823529411764708" green="0.80784313725490198" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="tipsBackground">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="titleFont">
             <color red="0.18431372549019609" green="0.27058823529411763" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="white">
-            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
